Zen of Python included into bibliography

--- a/text/bibliography.bib
+++ b/text/bibliography.bib
@@ -114,3 +114,11 @@
   url = {http://research.microsoft.com/en-us/um/people/simonpj/papers/assoc-types/fun-with-type-funs/FunWithTypeFuns-Apr09.pdf},
   note = {\url{http://research.microsoft.com/en-us/um/people/simonpj/papers/assoc-types/fun-with-type-funs/FunWithTypeFuns-Apr09.pdf}},
 }
+
+@misc{python:zen,
+  author = {Tim Peters},
+  title = {The Zen of Python},
+  year = {2004},
+  url = {http://www.python.org/dev/peps/pep-0020/},
+  note = {Type \uv{\texttt{import this}} into python interpreter (2.6)},
+}
