--- a/text/bibliography.bib
+++ b/text/bibliography.bib
@@ -120,5 +120,13 @@
   title = {The Zen of Python},
   year = {2004},
   url = {http://www.python.org/dev/peps/pep-0020/},
-  note = {Type \uv{\texttt{import this}} into python interpreter (2.6)},
+  note = {Type \uv{\texttt{import this}} into python interpreter},
+}
+
+@article{spjones:openTypeFunctions,
+  author = {Tom Schrijvers and Simon Peyton Jones and Manuel Chakravarty and Martin Sulzmann},
+  title = {Type checking with open type functions},
+  journal = {Sigplan Notices},
+  volume = {43},
+  year = {2008},
 }
