mess with make and bib

--- a/text/bibliography.bib
+++ b/text/bibliography.bib
@@ -66,7 +66,8 @@
   journal = {The Monad.Reader},
   month = {September},
   title = {{Type-Level Instant Insanity}},
-  volume = {Issue Eight},
+  volume = {},
+  number = {8},
   year = {2007},
   url = {http://www.haskell.org/wikiupload/d/dd/TMR-Issue8.pdf}
 }
@@ -80,7 +81,7 @@
   year = {2009},
   month = mar,
   day = {12},
-  volume = {Issue thir\-teen},
+  volume = {},
   number = {13},
   pages = {17--68},
   url = {http://www.haskell.org/wikiupload/8/85/TMR-Issue13.pdf}
